--- a/src/main/resources/templates/content/login-page.html
+++ b/src/main/resources/templates/content/login-page.html
@@ -1,8 +1,8 @@
-<div class="row-100 whited">
+<div class="row-100">
     <div class="col-20"></div>
     <div class="col-60">
         <div style="display: inline-flex; width: 100%; min-height: 70vh">
-            <form th:method="POST" th:action="@{/auth/login}" style="margin: auto; padding: 2vh" class="shadow">
+            <form th:method="POST" th:action="@{/auth/login}" style="margin: auto; padding: 2vh" class="shadow border">
                 <h4>Авторизация</h4>
                 <p>электронная почта</p>
                 <input placeholder="somebody@example.ru" type="email" name="username" id="username">
