--- a/src/main/resources/static/css/color-and-align.css
+++ b/src/main/resources/static/css/color-and-align.css
@@ -7,11 +7,6 @@
     padding: 0;
 }
 
-body {
-    background: royalblue;
-    color: whitesmoke;
-}
-
 .text-center {
     text-align: center;
 }
@@ -25,12 +20,12 @@ body {
 }
 
 .border {
-    border: solid mediumblue 1px;
-    border-radius: 20px;
+    border: solid black 1px;
+    border-radius: 5px;
 }
 
 .blacked {
-    background: royalblue;
+    background: darkblue;
     /*background: linear-gradient(-90deg, black, dimgray);*/
     color: whitesmoke;
 }
@@ -100,6 +95,25 @@ body {
     color: whitesmoke;
 }
 
+.link-button-simple-2 {
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    background: lightgray;
+    color: black;
+    width: 25px;
+    padding: 4px 0;
+    border: solid darkgray 1px;
+    border-radius: 5px;
+}
+
+.link-button-simple-2:hover {
+    text-decoration: none;
+    background-color: royalblue;
+    border: solid darkblue 1px;
+    color: whitesmoke;
+}
+
 .link-decoration {
     text-decoration: none;
     color: #111111;
@@ -108,6 +122,14 @@ body {
 .link-decoration:hover {
     text-decoration: none;
     color: #111111;
+}
+
+.hr-horizontal-gradient {
+    margin: 20px 0;
+    padding: 0;
+    height: 6px;
+    border: none;
+    background: linear-gradient(45deg, #333, #ddd);
 }
 
 .shadow {
