--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,21 +1,36 @@
+<form id="logoutForm" method="post" th:action="@{/logout}"></form>
 <div class="row-100">
-    <div class="col-20">
-        <ul class="footer-navbar text-right">
-            <li><a th:href="@{/}">Главная</a></li>
-            <li><a th:href="@{/material}">Редакция</a></li>
-            <li><a th:href="@{/contact}">Контакты</a></li>
-            <li><a th:href="@{/auth/login}">Вход</a></li>
-        </ul>
+    <div class="col-20"></div>
+    <div class="col-60" style="padding: 1vh">
+        <hr class="hr-horizontal-gradient">
+        <div class="col-33">
+            <ul class="footer-navbar text-left">
+                <li><a th:href="@{/}">Главная</a></li>
+                <li><a th:href="@{/material/page/0}" th:if="${baseAuth}">Редакция</a></li>
+                <li><a th:href="@{/contact}">Контакты</a></li>
+                <li><a th:href="@{/auth/login}" th:if="${!baseAuth}">Вход</a></li>
+                <li><a id="logout" href="#" onclick="document.getElementById('logoutForm').submit()" th:if="${baseAuth}">Выход</a></li>
+            </ul>
+        </div>
+        <div class="col-33 text-center">
+            <p>Разработано ФГБУ "ФЦПСР"</p>
+        </div>
+        <div class="col-33">
+            <ul class="footer-navbar text-right">
+                <li>
+                    <a href="https://spring.io/">Spring Framework</a>
+                    <img src="/img/spring-logo.png" width="32px" height="32px" style="padding: 2px">
+                </li>
+                <li>
+                    <a href="https://www.postgresql.org/">Postgresql</a>
+                    <img src="/img/postgresql-logo.png" width="32px" height="32px" style="padding: 2px">
+                </li>
+                <li>
+                    <a href="https://min.io/">MinIO</a>
+                    <img src="/img/minio-logo.png" width="32px" height="32px" style="padding: 2px">
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="col-60 text-center">
-        <p style="font-size: 18px">Разработано ФГБУ "ФЦПСР"</p>
-    </div>
-    <div class="col-20 flex-center">
-        <ul class="footer-navbar text-left">
-            <li><a>Технологии:</a></li>
-            <li><a href="#">Spring Framework</a></li>
-            <li><a href="#">Postgresql</a></li>
-            <li><a href="#">MinIO</a></li>
-        </ul>
-    </div>
+    <div class="col-20"></div>
 </div>
