--- a/src/main/resources/templates/content/add-post-page.html
+++ b/src/main/resources/templates/content/add-post-page.html
@@ -1,8 +1,8 @@
-<div class="row-100 whited">
+<div class="row-100">
     <div class="col-20"></div>
     <div class="col-60">
         <div style="display: inline-flex; width: 100%">
-            <form th:method="POST" th:action="@{/material/post}" th:object="${post}" class="flex-center shadow" style="padding: 2vh; width: 100%" enctype="multipart/form-data">
+            <form th:method="POST" th:action="@{/material/post}" th:object="${post}" class="flex-center" style="padding: 2vh; width: 100%" enctype="multipart/form-data">
                 <h2 style="padding: 1vh" class="text-center">Добавить методический материал</h2>
                 <span style="padding: 0 2vh">Название</span>
                 <input type="text" placeholder="название" style="width: 100%; margin: 1vh; padding: 1vh" th:field="*{name}">
@@ -22,10 +22,10 @@
                     <p th:errors="*{content}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
                 </div>
 
-                <div style="margin: 1vh" class="shadow">
+                <div style="margin: 1vh" class="shadow border">
                     <div style="display: inline-block" th:each="st : ${sportTags}">
                         <div style="padding: 1vh">
-                            <img th:src="'/' + ${st.getImagePath()}" width="32px" height="32px" style="margin-left: auto; margin-right: auto; display: block"><br>
+                            <img th:src="'/download/' + ${st.getImageId()}" width="32px" height="32px" style="margin-left: auto; margin-right: auto; display: block"><br>
                             <input type="checkbox" name="sportTag" th:value="${st.getId()}"><span th:text="${st.getName()}"></span>
                         </div>
                     </div>
