--- a/src/main/resources/templates/content/admin-page.html
+++ b/src/main/resources/templates/content/admin-page.html
@@ -1,8 +1,8 @@
-<div class="row-100-block whited">
+<div class="row-100-block">
   <div class="col-20"></div>
   <div class="col-60 text-center">
     <div class="row-100" style="min-height: 70vh">
-      <div class="flex-center shadow" style="padding: 2vh">
+      <div class="flex-center shadow border" style="padding: 2vh">
         <h3>Управление сервисом</h3>
         <p><a th:href="@{/auth/reg}">Регистрация пользователя</a></p>
         <p><a th:href="@{/admin/tag}">Добавление спортивного тега</a></p>
