--- a/src/main/resources/templates/content/contact-page.html
+++ b/src/main/resources/templates/content/contact-page.html
@@ -1,8 +1,8 @@
-<div class="row-100 whited">
+<div class="row-100">
   <div class="col-20"></div>
   <div class="col-60">
-    <div style="display: inline-flex; width: 100%; min-height: 70vh">
-      Contact-Page-TEST
+    <div class="row-100">
+      <div id="map"></div>
     </div>
   </div>
   <div class="col-20"></div>
