--- a/src/main/resources/templates/content/home-page.html
+++ b/src/main/resources/templates/content/home-page.html
@@ -1,22 +1,45 @@
-<div class="row-100-block whited">
+<div class="row-100-block">
     <div class="col-20"></div>
     <div class="col-60" style="display: flex">
-        <div class="col-100-inline-flex">
-            <div class="flex-center" style="width: 100%">
-                <form th:method="POST" th:action="@{/matrial/search}">
-                    <input type="text" placeholder="поиск материалов" style="width: 70%; height: 30px">
-                    <input type="submit" value="поиск" class="input-button" style="width: 20%">
-                </form>
-            </div>
+        <form th:method="POST" th:action="@{/search}" style="padding: 1vh; display: block; width: 100%" th:object="${search}">
+            <input type="text" placeholder="поиск материалов" id="search" name="search" style="display: inline-block; padding: 0.5vh; width: 90%" th:field="*{searchMessage}">
+            <input type="submit" value="поиск" class="input-button" style="display: inline-block">
+        </form>
+    </div>
+    <div class="col-20"></div>
+</div>
+<div class="row-100">
+    <div class="col-20"></div>
+    <div class="col-60" style="padding: 1vh">
+        <div class="flex-container shadow border target" th:each="post,stat:${posts}" style="padding: 1vh; margin-bottom: 1vh">
+            <a th:href="@{/read/post/{id}(id=${post.getId()})}" style="color: black">
+                <div class="col-60">
+                    <div class="row-100">
+                        <h4 th:text="${post.getName()}">name</h4>
+                    </div>
+                    <div class="row-100 word-break">
+                        <p th:text="${post.getAnnotation()}">annotation</p>
+                    </div>
+                </div>
+                <div class="col-40">
+                    <img class="image" th:src="'/download/' + ${post.getImageId()}">
+                </div>
+            </a>
         </div>
     </div>
     <div class="col-20"></div>
 </div>
-<div class="row-100 whited">
+<div class="row-100-block">
     <div class="col-20"></div>
-    <div class="col-60" style="min-height: 60vh">
-        <div style="display: inline-flex; width: 100%">
-            Home-Page-TEST
+    <div class="col-60" style="display: flex">
+        <div style="display: block; margin: auto">
+            <a style="border-radius: 5px" class="link-button-simple" th:href="@{/page/0}" th:if="${page > 0}">первая</a>
+            <a class="link-button-simple-2" th:text="${page - 1}" th:href="@{/page/{num}(num=${page - 2})}" th:if="${page > 1}">-2</a>
+            <a class="link-button-simple-2" th:text="${page}" th:href="@{/page/{num}(num=${page - 1})}" th:if="${page > 0}">-1</a>
+            <a class="link-button-simple-2" th:text="${page + 1}" th:href="@{/page/{num}(num=${page})}" style="background: royalblue; color: whitesmoke">текущая</a>
+            <a class="link-button-simple-2" th:text="${page + 2}" th:href="@{/page/{num}(num=${page + 1})}" th:if="${page + 1} <= ${lastPage}">+1</a>
+            <a class="link-button-simple-2" th:text="${page + 3}" th:href="@{/page/{num}(num=${page + 2})}" th:if="${page + 2} <= ${lastPage}">+2</a>
+            <a style="border-radius: 5px" class="link-button-simple" th:href="@{/page/{num}(num=${lastPage})}" th:if="${page} != ${lastPage}">последняя</a>
         </div>
     </div>
     <div class="col-20"></div>
