--- a/src/main/resources/templates/content/tag-page.html
+++ b/src/main/resources/templates/content/tag-page.html
@@ -1,16 +1,16 @@
-<div class="row-100 whited">
+<div class="row-100">
     <div class="col-20"></div>
     <div class="col-60">
         <div style="display: inline-flex; width: 100%; min-height: 70vh">
-            <form th:method="POST" th:action="@{/admin/tag}" th:object="${sportTag}" class="shadow" style="margin: auto; padding: 2vh" enctype="multipart/form-data">
-                <h2>Register new Sport Tag</h2>
-                <p>name</p>
+            <form th:method="POST" th:action="@{/admin/tag}" th:object="${sportTag}" class="shadow border" style="margin: auto; padding: 2vh" enctype="multipart/form-data">
+                <h2>Добавить спортивный тег</h2>
+                <p>название</p>
                 <input placeholder="Sport tag name" type="text" th:field="*{name}">
                 <br>
                 <div th:if="${#fields.hasErrors('name')}" style="border: solid 1px red; background: pink">
                     <p th:errors="*{name}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
                 </div>
-                <p>description</p>
+                <p>описание</p>
                 <textarea placeholder="description" rows="10" cols="50" th:field="*{description}" style="resize: none"></textarea>
                 <br>
                 <div th:if="${#fields.hasErrors('description')}" style="border: solid 1px red; background: pink">
