--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -9,9 +9,12 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+        <script src="https://api-maps.yandex.ru/2.1/?apikey=7c13cf7d-c937-4ca6-8021-145ac16bdcae&lang=ru_RU" type="text/javascript"></script>
         <link href="/css/grid.css" rel="stylesheet">
         <link href="/css/color-and-align.css" rel="stylesheet">
+        <link href="/css/map.css" rel="stylesheet">
         <script src="/js/reg-checkbox.js" th:inline="javascript"></script>
+        <script src="/js/map.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -27,6 +30,7 @@
         <div th:insert="~{content/tag-page}" th:if="${index} == 'tag-page'"></div>
         <div th:insert="~{content/add-post-page}" th:if="${index} == 'add-post-page'"></div>
         <div th:insert="~{content/edit-post-page}" th:if="${index} == 'edit-post-page'"></div>
+        <div th:insert="~{content/post-page}" th:if="${index} == 'post-page'"></div>
 
         <footer th:insert="~{blocks/footer}"></footer>
 
