--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -31,6 +31,7 @@
         <div th:insert="~{content/add-post-page}" th:if="${index} == 'add-post-page'"></div>
         <div th:insert="~{content/edit-post-page}" th:if="${index} == 'edit-post-page'"></div>
         <div th:insert="~{content/post-page}" th:if="${index} == 'post-page'"></div>
+        <div th:insert="~{content/profile-page}" th:if="${index} == 'profile-page'"></div>
 
         <footer th:insert="~{blocks/footer}"></footer>
 
