--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,7 +1,7 @@
 <div class="row-100-block">
     <div class="col-20"></div>
     <div class="col-60 text-center blacked" style="border-radius: 10px 10px 0 0">
-        <h2><b>Спортивные материалы</b></h2>
+        <h2 style="padding: 2vh 0"><b>Спортивные материалы</b></h2>
     </div>
     <div class="col-20"></div>
 </div>
