update 28.12.2023 - test update

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -2,6 +2,31 @@
     <div class="col-20"></div>
     <div class="col-60 text-center blacked" style="border-radius: 10px 10px 0 0">
         <h2 style="padding: 2vh 0"><b>Спортивные материалы</b></h2>
+        <div class="row-100">
+            <div class="col-100 my-slider whited border" style="border: solid 1px darkblue">
+                <div class="row-100-block">
+                    <span><b>Написать обращение нам через</b></span><img src="/img/gos-logo.png" width="128">
+                </div>
+                <div id="js-show-iframe-wrapper" class="row-100-block">
+                    <div class="pos-banner-fluid bf-142">
+                        <div class="bf-142__container">
+                            <div class="bf-142__logo-wrap">
+                                <img class="bf-142__img"
+                                     src="https://pos.gosuslugi.ru/bin/banner-fluid/gosuslugi-logo-with-slogan-blue.svg"
+                                     alt="Госуслуги"/>
+                            </div>
+
+                            <div class="bf-142__decor"></div>
+
+                            <div class="bf-142__content">
+                                <div class="bf-142__text">Сообщите о проблеме и оцените результат её решения</div>
+                                <button class="pos-banner-btn_2" type="button">Написать</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="col-20"></div>
 </div>
