--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -13,8 +13,11 @@
         <link href="/css/grid.css" rel="stylesheet">
         <link href="/css/color-and-align.css" rel="stylesheet">
         <link href="/css/map.css" rel="stylesheet">
+        <link href="/css/wget-s1.css" rel="stylesheet">
+        <link href="/css/wget-s2.css" rel="stylesheet">
         <script src="/js/reg-checkbox.js" th:inline="javascript"></script>
         <script src="/js/map.js" type="text/javascript"></script>
+        <script src='https://pos.gosuslugi.ru/bin/script.min.js'></script>
     </head>
 
     <body>
@@ -42,5 +45,7 @@
                 });
             });
         </script>
+        <script src="/js/wget-script.js" type="text/javascript"></script>
+        <script>Widget("https://pos.gosuslugi.ru/form", 389548)</script>
     </body>
 </html>
