--- a/src/main/resources/templates/content/admin-page.html
+++ b/src/main/resources/templates/content/admin-page.html
@@ -1,7 +1,7 @@
 <div class="row-100-block">
   <div class="col-20"></div>
   <div class="col-60 text-center">
-    <div class="row-100" style="min-height: 70vh">
+    <div class="row-100" style="padding: 10vh 0">
       <div class="flex-center shadow border" style="padding: 2vh">
         <h3>Управление сервисом</h3>
         <p><a th:href="@{/auth/reg}">Регистрация пользователя</a></p>
