--- a/src/main/resources/templates/content/tag-page.html
+++ b/src/main/resources/templates/content/tag-page.html
@@ -1,7 +1,7 @@
 <div class="row-100">
     <div class="col-20"></div>
     <div class="col-60">
-        <div style="display: inline-flex; width: 100%; min-height: 70vh">
+        <div style="display: inline-flex; width: 100%; padding: 10vh 0">
             <form th:method="POST" th:action="@{/admin/tag}" th:object="${sportTag}" class="shadow border" style="margin: auto; padding: 2vh" enctype="multipart/form-data">
                 <h2>Добавить спортивный тег</h2>
                 <p>название</p>
