--- a/src/main/resources/templates/content/material-page.html
+++ b/src/main/resources/templates/content/material-page.html
@@ -5,8 +5,7 @@
             <div class="col-100-inline-flex">
                 <div class="flex-center" style="width: 100%">
                     <form th:method="POST" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%" th:object="${search}">
-                        <input type="text" placeholder="поиск материалов" style="display: inline-block; padding: 0.5vh; width: 90%" th:field="*{searchMessage}">
-                        <input type="submit" value="поиск" class="input-button" style="display: inline-block">
+                        <input type="search" placeholder="поиск материалов" style="display: inline-block; padding: 0.5vh; width: 100%" th:field="*{searchMessage}">
                     </form>
                 </div>
             </div>
@@ -15,12 +14,11 @@
             <div class="col-70-inline-flex">
                 <div class="flex-center" style="width: 100%">
                     <form th:method="POST" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%" th:object="${search}">
-                        <input type="text" placeholder="поиск материалов" style="display: inline-block; padding: 0.5vh; width: 80%" th:field="*{searchMessage}">
-                        <input type="submit" value="поиск" class="input-button" style="display: inline-block">
+                        <input type="search" placeholder="поиск материалов" style="display: inline-block; padding: 0.5vh; width: 100%" th:field="*{searchMessage}">
                     </form>
                 </div>
             </div>
-            <div class="col-30-inline-flex border">
+            <div class="col-30-inline-flex">
                 <div class="flex-center" style="width: 100%" th:if="${rolePublisher}">
                     <form th:method="GET" th:action="@{/material/post}" class="text-center">
                         <input type="submit" value="добавить пост" class="input-button">
