--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -18,16 +18,16 @@
         <div class="col-33">
             <ul class="footer-navbar text-right">
                 <li>
-                    <a href="https://spring.io/">Spring Framework</a>
-                    <img src="/img/spring-logo.png" width="32px" height="32px" style="padding: 2px">
+                    <a href="https://spring.io/"><img src="/img/spring-logo.svg" height="32" style="padding: 2px"></a>
                 </li>
                 <li>
-                    <a href="https://www.postgresql.org/">Postgresql</a>
-                    <img src="/img/postgresql-logo.png" width="32px" height="32px" style="padding: 2px">
+                    <a href="https://www.postgresql.org/"><img src="/img/postgresql-logo.png" height="32" style="padding: 2px"></a>
                 </li>
                 <li>
-                    <a href="https://min.io/">MinIO</a>
-                    <img src="/img/minio-logo.png" width="32px" height="32px" style="padding: 2px">
+                    <a href="https://min.io/"><img src="/img/minio-logo.svg" height="48" style="padding: 2px"></a>
+                </li>
+                <li>
+                    <a href="https://manticoresearch.com/"><img src="/img/manticore-logo.svg" height="32" style="padding: 2px"></a>
                 </li>
             </ul>
         </div>
