--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -3,9 +3,9 @@
     <div class="col-60 text-center blacked" style="border-radius: 10px 10px 0 0">
         <h2 style="padding: 2vh 0"><b>Спортивные материалы</b></h2>
         <div class="row-100">
-            <div class="col-100 my-slider whited border" style="border: solid 1px darkblue">
+            <div class="col-100 my-slider transition-execute whited border" style="border: solid 1px darkblue">
                 <div class="row-100-block">
-                    <span><b>Написать обращение нам через</b></span><img src="/img/gos-logo.png" width="128">
+                    <span><b>Напишите нам через </b></span><img src="/img/gosuslugi-logo.svg" width="64" style="margin: 1vh">
                 </div>
                 <div id="js-show-iframe-wrapper" class="row-100-block">
                     <div class="pos-banner-fluid bf-142">
